fixing alignment of space and working on section for aaiff

--- a/css/detailpage.css
+++ b/css/detailpage.css
@@ -351,7 +351,7 @@ gap: 20px;
 .twocolumn{
   display: inline-flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
   gap: 30px;
   width:66%;
